Update the style

--- a/src/App.css
+++ b/src/App.css
@@ -14,11 +14,7 @@ body {
     width: 960px;
     margin: 0 auto;
 }
-/* TODO: Add css here */
-/* .tabs {
-
-}
- */
+/*  css here */
  .tabs-container {
     width: 80%;
     margin: 20px auto;
